# SRE_Agent

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/agents/: __init__.py  rca_agent.py
app/api/: main.py  schemas.py
app/api/routes/: analysis.py  incidents.py
app/auth/: user_store.py
app/database/: __init__.py  models.py  sqlite_store.py
app/graph/: __init__.py  state.py  workflow.py
app/llm/: __init__.py  ollama_client.py  schemas.py
app/memory/: __init__.py  chromadb_store.py
app/reports/: __init__.py  generator.py
app/tools/: __init__.py  kubernetes_tools.py  log_tools.py  metrics_tools.py
app/ui/: streamlit_app.py
argocd/: application.yaml
data/chroma/: chroma.sqlite3
data/reports/: RCA_b33adf88_20260710T200020Z.md
data/sqlite/: rca_incidents.db  users.db
k8s/: k3d-config.yaml  namespaces.yaml
k8s/apps/: demo-crashloop.yaml  demo-imagepull.yaml  demo-oom.yaml
k8s/grafana/: grafana-dashboard-cm.yaml  grafana-deployment.yaml  rca-dashboard.json
k8s/prometheus/: kube-state-metrics.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml
k8s/sre-agent/: configmap.yaml  deployment.yaml  pvc.yaml  rbac.yaml  service.yaml
scripts/: demo.sh  docker-entrypoint.sh  setup.sh  start.sh
tests/: __init__.py  test_config.py  test_database.py  test_llm_schema.py  test_log_tools.py
